--- a/frtos_logger.ioc
+++ b/frtos_logger.ioc
@@ -2,7 +2,7 @@
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION,FootprintOK,configENABLE_BACKWARD_COMPATIBILITY,configRECORD_STACK_HIGH_ADDRESS
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=logger_th,-3,128,entry_logger_thread,Default,NULL,Static,logger_th_buffer,logger_th_cb
+FREERTOS.Tasks01=logger_th,-3,128,entry_logger_thread,Default,NULL,Static,logger_th_buffer,logger_th_cb;demo_th,0,128,entry_demo_th,Default,NULL,Static,demo_th_buffer,demo_th_cb
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
 File.Version=6
@@ -19,7 +19,7 @@ Mcu.Name=STM32G071R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=VP_SYS_VS_None
+Mcu.Pin10=VP_SYS_VS_tim17
 Mcu.Pin11=VP_SYS_VS_DBSignals
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PF0-OSC_IN (PF0)
@@ -44,7 +44,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:false
-NVIC.TimeBase=None
+NVIC.TIM17_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM17_IRQn
+NVIC.TimeBaseIP=TIM17
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -155,8 +157,8 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
-VP_SYS_VS_None.Mode=None
-VP_SYS_VS_None.Signal=SYS_VS_None
+VP_SYS_VS_tim17.Mode=TIM17
+VP_SYS_VS_tim17.Signal=SYS_VS_tim17
 board=NUCLEO-G071RB
 boardIOC=true
 isbadioc=false
