--- a/frtos_logger.ioc
+++ b/frtos_logger.ioc
@@ -13,14 +13,16 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32G071R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=VP_SYS_VS_tim17
 Mcu.Pin11=VP_SYS_VS_DBSignals
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PF0-OSC_IN (PF0)
 Mcu.Pin4=PA2
@@ -29,7 +31,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14-BOOT0
 Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=12
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071RBTx
@@ -116,7 +118,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -150,8 +152,9 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
-USART2.IPParameters=VirtualMode-Asynchronous,OverSampling
-USART2.OverSampling=UART_OVERSAMPLING_16
+USART2.BaudRate=2000000
+USART2.IPParameters=VirtualMode-Asynchronous,OverSampling,BaudRate
+USART2.OverSampling=UART_OVERSAMPLING_8
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
@@ -159,6 +162,8 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-G071RB
 boardIOC=true
 isbadioc=false
